--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "name": "Auto-Forward-Bot-V2",
   "description": "Telegram's Best Smart Plugin File Forward Bot",
   "logo": "https://telegra.ph/file/5c3499c3b2ec282cf0c4e.jpg",
-  "keywords": [
+  "stack": "container",
+    "keywords": [
     "telegram",
     "best",
     "file",
