--- a/app.json
+++ b/app.json
@@ -43,6 +43,10 @@
       "value": ""
     }
   },
+    "addons": [],
+    "buildpacks": [{
+        "url": "heroku/python"
+    }],
   "formation": {
     "worker": {
       "quantity": 1,
